--- a/.github/workflows/nv-torch-latest-v100.yml
+++ b/.github/workflows/nv-torch-latest-v100.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           pip install .[dev,1bit,autotuning]
           ds_report
+          pip install pynvml psutil
 
       - name: Python environment
         run: |
@@ -55,5 +56,6 @@ jobs:
         run: |
           unset TORCH_CUDA_ARCH_LIST # only jit compile for current arch
           cd tests
-          pytest $PYTEST_OPTS --forked -n 4 unit/ --torch_ver="2.4" --cuda_ver="11.8"
-          pytest $PYTEST_OPTS --forked -m 'sequential' unit/ --torch_ver="2.4" --cuda_ver="11.8"
+          pytest $PYTEST_OPTS --forked -n 4 -s unit/ --torch_ver="2.4" --cuda_ver="11.8" 2>/dev/null | grep MEM_DEBUG
+          pytest $PYTEST_OPTS --forked -m -s 'sequential' unit/ --torch_ver="2.4" --cuda_ver="11.8" 2>/dev/null | grep MEM_DEBUG
+
