--- a/.github/workflows/nv-torch-latest-v100.yml
+++ b/.github/workflows/nv-torch-latest-v100.yml
@@ -56,5 +56,5 @@ jobs:
         run: |
           unset TORCH_CUDA_ARCH_LIST # only jit compile for current arch
           cd tests
-          pytest $PYTEST_OPTS --forked -n 4 -s unit/ --torch_ver="2.4" --cuda_ver="11.8" 2>/dev/null | grep MEM_DEBUG
-          pytest $PYTEST_OPTS --forked -m -s 'sequential' unit/ --torch_ver="2.4" --cuda_ver="11.8" 2>/dev/null | grep MEM_DEBUG
+          pytest $PYTEST_OPTS --forked -n 4 -s unit/ --torch_ver="2.4" --cuda_ver="11.8"
+          pytest $PYTEST_OPTS --forked -m -s 'sequential' unit/ --torch_ver="2.4" --cuda_ver="11.8"
