--- a/.github/workflows/nv-torch-latest-v100.yml
+++ b/.github/workflows/nv-torch-latest-v100.yml
@@ -59,7 +59,7 @@ jobs:
           echo "Running tests and logging to ${TEST_LOG_FILE}"
           # Let this line return true so that we can grep for "Failed" in the log file
           RUNNING_TEST_LOG_FILE=${TEST_LOG_FILE} pytest $PYTEST_OPTS --forked -n 4 unit/ --torch_ver="2.4" --cuda_ver="12.1" || PYTEST_EXIT_CODE=$?
-          grep "Failed" ${TEST_LOG_FILE}
+          grep "Failed" ${TEST_LOG_FILE} || true
           if [ $PYTEST_EXIT_CODE -ne 0 ]; then
             # We don't clean the file here for debugging
             echo "pytest failed with exit code $PYTEST_EXIT_CODE"
@@ -68,7 +68,7 @@ jobs:
           rm -f ${TEST_LOG_FILE}
           # Do the same as above
           RUNNING_TEST_LOG_FILE=${TEST_LOG_FILE} pytest $PYTEST_OPTS --forked -m 'sequential' unit/ --torch_ver="2.4" --cuda_ver="12.1" || PYTEST_EXIT_CODE=$?
-          grep "Failed" ${TEST_LOG_FILE}
+          grep "Failed" ${TEST_LOG_FILE} || true
           if [ $PYTEST_EXIT_CODE -ne 0 ]; then
             echo "pytest failed with exit code $PYTEST_EXIT_CODE"
             exit $PYTEST_EXIT_CODE
