--- a/.github/workflows/nv-torch-latest-v100.yml
+++ b/.github/workflows/nv-torch-latest-v100.yml
@@ -59,6 +59,7 @@ jobs:
           echo "Running tests and logging to ${TEST_LOG_FILE}"
           # Let this line return true so that we can grep for "Failed" in the log file
           set +e
+          pytest -s unit/comm/test_dist.py::TestDistInferenceAllReduce
           NCCL_SOCKET_IFNAME="" DS_UNITTEST_FILE_STORE_DIR=/dev/shm RUNNING_TEST_LOG_FILE=${TEST_LOG_FILE} pytest $PYTEST_OPTS --forked -n 4 unit/ --torch_ver="2.5" --cuda_ver="12.1"
           PYTEST_EXIT_CODE=$?
           if [ $PYTEST_EXIT_CODE -ne 0 ]; then
