--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -3,6 +3,7 @@ clang-format==18.1.3
 comet_ml>=3.41.0
 deepspeed-kernels ; sys_platform == 'linux'
 docutils<0.18
+einops
 future
 importlib-metadata>=4
 mup
