--- a/.github/workflows/nv-torch-nightly-v100.yml
+++ b/.github/workflows/nv-torch-nightly-v100.yml
@@ -2,6 +2,9 @@ name: nv-torch-nightly-v100
 
 on:
   workflow_dispatch:
+    pull_request:
+    paths:
+      - '.github/workflows/nv-torch-nightly-v100.yml'
   schedule:
     - cron: "0 0 * * *"
 
