--- a/.github/workflows/no-torch.yml
+++ b/.github/workflows/no-torch.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build deepspeed
         run: |
-          DS_BUILD_STRING=" " python setup.py sdist
+          DS_ACCELERATOR="cuda" DS_BUILD_STRING=" " python setup.py sdist
 
       - name: Open GitHub issue if nightly CI fails
         if: ${{ failure() && (github.event_name == 'schedule') }}
