--- a/.github/workflows/xpu-max1100.yml
+++ b/.github/workflows/xpu-max1100.yml
@@ -44,6 +44,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install prerequisite
+      shell: bash
       run: |
         apt-get update
         apt-get install clinfo libaio-dev python3-pip python3.12-venv -y
