--- a/.github/workflows/nv-a6000.yml
+++ b/.github/workflows/nv-a6000.yml
@@ -42,6 +42,7 @@ jobs:
         run: |
           git clone --depth=1 https://github.com/huggingface/transformers
           cd transformers
+          git checkout v4.47.0
           git rev-parse --short HEAD
           python -m pip install .
       - name: Install deepspeed
