--- a/.github/workflows/nv-a6000.yml
+++ b/.github/workflows/nv-a6000.yml
@@ -42,12 +42,13 @@ jobs:
         run: |
           git clone https://github.com/huggingface/transformers
           cd transformers
-          git checkout v4.47.0
+          #git checkout v4.47.0
           git rev-parse --short HEAD
           python -m pip install .
       - name: Install deepspeed
         run: |
           python -m pip install docutils==0.18.1 jinja2==3.0 urllib3==1.26.11 ninja
+          git checkout v0.15.2
           python -m pip install .[dev,1bit,autotuning,inf]
           ds_report
       - name: Python environment
