--- a/.github/workflows/nv-a6000.yml
+++ b/.github/workflows/nv-a6000.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           git clone https://github.com/huggingface/transformers
           cd transformers
-          git checkout v4.47.1
+          git checkout 24c91f095fec4d90fa6901ef17146b4f4c21d0a3
           git rev-parse --short HEAD
           python -m pip install .
       - name: Install deepspeed
