--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,6 +31,11 @@ jobs:
     steps:
         - uses: actions/checkout@v4
 
+        - name: clean environment
+          run: |
+            sudo rm -rf /usr/share/dotnet
+            sudo rm -rf /opt/ghc
+            python --version
         - name: environment
           run: |
             which python
