--- a/.github/workflows/nv-sd.yml
+++ b/.github/workflows/nv-sd.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Install deepspeed
         run: |
           pip install image-similarity-measures
+          pip install -U numpy==1.26.3
           python -m pip install opencv-python==4.6.* --force-reinstall
           python -m pip install docutils==0.18.1 jinja2==3.0 urllib3==1.26.11 ninja
           python -m pip install .[dev,1bit,autotuning,sd]
